# Gyurchine

./: CMakeLists.txt  README.md  run.sh
assets/shaders/: default.glsl
include/engine/: game.h  logger.h  utils.h  window.h
include/engine/graphics/: shader.h
src/engine/: game.cpp  logger.cpp  main.cpp  utils.cpp  window.cpp
src/engine/graphics/: shader.cpp
